# lingmo-kwin-pulgin

./: CMakeLists.txt  README.md
config/: kwinrc
debian/: changelog  control  copyright
plugins/: CMakeLists.txt
plugins/decoration/: CMakeLists.txt  button.cpp  decoration.cpp  decoration.h
plugins/roundedwindow/: CMakeLists.txt  main.cpp  roundedwindow.cpp  roundedwindow.h  roundedwindow.json
scripts/lingmo_popups/: metadata.desktop
scripts/lingmo_popups/contents/code/: main.js
scripts/lingmo_scale/: metadata.desktop
scripts/lingmo_squash/: metadata.desktop
scripts/lingmolauncher/: metadata.desktop
tabbox/lingmo_thumbnail/: metadata.desktop
